welcome.lessons.welcome.instructions.InstructionsDrawG.scala.error
Source:2: error: not found: value setBrosseCouleur
setBrosseCouleur(Color.blue)
^Source:23: error: not found: value setBrosseCouleur
setBrosseCouleur(Color.white)
^