welcome.lessons.welcome.instructions.InstructionsDrawG.scala.code
setBrosseCouleur(Color.blue)
gauche()
avance()
avance()
avance()
avance()
gauche()
avance()
avance()
avance()
avance()
gauche()
avance()
avance()
avance()
avance()
gauche()
avance()
avance()
gauche()
avance()
setBrosseCouleur(Color.white)
droite()
avance()
avance()
droite()
avance()
gauche()
